# OpenResearch

./: .dockerignore  .env  .env.backup  .env.docker  .env.docker.example  .env.example  .gitignore  DOCKER.md  LATEX_README.md  LICENSE  README.md  SRS.docx  SRS.md  SRS.txt  agent_credentials.txt  ai-logs.txt  ai_failed_logs.txt  ai_logs.txt  ai_logs2.txt  ai_logs2_utf8.txt  ai_logs_utf8.txt  ai_service_logs.txt  all_logs.txt  build_log.txt  cleaned_logs.json  client_logs.txt  client_logs_utf8.txt  create_group_reports.sql  debug_browser.js  debug_browser2.js  debug_browser3.js  debug_browser3_out.txt  debug_browser3_out_utf8.txt  debug_browser_e2e.js  debug_browser_e2e_click.js  debug_browser_e2e_fetch.js  debug_dom.html  debug_fetch_result.txt  diff_client.txt  diff_routes.txt  (+43 more)
.github/: agentic-instructions.md
.github/workflows/: ci.yml
ai-service/: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  check.py  check_arxiv.py  check_arxiv_date.py  deepseektest.py  fix_tests.py  manual_test_survey.py  output.txt  patch_agentic.py  pyproject.toml  pytest.ini  pytest_out.txt  pytest_out_utf8.txt  requirements.txt  run.sh  test_agent.py  test_output.txt  test_output2.txt  test_rag.py  test_tool.py  test_tool_schema.py
ai-service/app/: __init__.py  agent.py  agentic.py  config.py  database.py  db_engine.py  deps.py  download_models.py  embeddings.py  gemini_client.py  groq_client.py  intent_classifier.py  latex_generator.py  llm_client.py  main.py  mcp_client.py  memory.py  models.py  planner_agent.py  report_generator.py  reranker.py  vector_store.py  workflow_orchestrator.py  workflow_state.py  workflow_templates.py
ai-service/app/routers/: agent.py  chat.py  health.py  papers.py  reports.py  vectors.py
ai-service/app/tools/: __init__.py  arxiv.py  citation_anchor.py  citation_graph.py  gap_finder.py  methodology_extractor.py  reviewer_anticipator.py  web_search.py
ai-service/tests/: test_agent.py  test_agent_wire.py  test_agentic.py  test_api.py  test_arxiv.py  test_database.py  test_embeddings.py  test_groq_client.py  test_intent_classifier.py  test_main.py  test_main_supplementary.py  test_mcp_client.py  test_memory.py  test_report_generator.py  test_vector_store.py
aiserver/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
client/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README-PHASE1.md  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
client/app/: globals.css  layout.tsx
client/components/: ErrorBoundary.tsx
client/lib/: api.ts  auth.ts  logger.ts  mock-data.ts  socket.ts  toast.ts  types.ts  utils.ts
docs/: SRS.md  UML-Diagrams.md  agents.md  database-schema.md  deployment.md  idea.md  project-documentation.html  project-documentation.md  socket-io-events.md  testing.md
docs/adr/: 0001-service-boundaries.md  0002-jwt-access-refresh-split.md  0003-hosted-embeddings.md  0004-hybrid-retrieval.md  0005-scope-cut.md  0006-research-agent.md
docs/features/: ai-features.md  group-context.md  group-memory-notes.md
e2e/: agent.spec.ts  responsive.spec.ts  smoke.spec.ts  workflow.spec.ts
mcp/academic-papers/: Dockerfile  README.md  main.py  pyproject.toml
playwright-report/: index.html
scripts/: get-mobile-url.ps1  start-multiuser-chat.ps1  test_ai_service.py  verify-ai-service.sh
server/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.sh  package-lock.json  package.json  vitest.config.ts
server/drizzle/: 0000_bizarre_power_man.sql  0000_init.sql  0001_chief_silhouette.sql  0001_fk_indexes.sql  0001_group_context_vectors.sql  0002_hybrid_search.sql  0003_fix_vector_dimension.sql  0004_methodology_and_lineage_tables.sql  (+1 more)
(+123 files in other folders)
