[project]
name = "aiserver"
version = "0.1.0"
description = "AI Server for OpenResearch - Session summarization, task extraction, and Q&A"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.32.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]
