[project]
name = "openresearch-mcp-academic-papers"
version = "0.1.0"
description = "MCP server for academic paper discovery (ArXiv + Semantic Scholar)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "feedparser>=6.0.11",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
